code multi language function